--- a/index.html
+++ b/index.html
@@ -8,22 +8,39 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section class="heading">
-        <h3 class="left">SHINESHOP</h3>
-        <section class="right">
-            <img src="./search.png" alt="search">
-            <img src="./account.png" alt="account">
-            <img src="./shop.png" alt="shop">
+    <section class="all">
+        <header class="top">
+            <h3>SHINESHOP</h3>
+            <section class="right">
+                <img src="./search.svg" alt="search" class="ico">
+                <img src="./account.png" alt="account" class="ico">
+                <img src="./shop.png" alt="shop" class="ico">
+            </section>
+            <section class="right20">
+                <img src="./menu.png" alt="menu" class="icon">
+                <img src="./instagram.svg" alt="instagram" class="icon">
+                <img src="./facebook.svg" alt="facebook" class="icon">
+            </section>
+        </header>
+        <section class="container">
+            <section class="left20"> 
+                <div class="boi">  
+                    <span class="bruh">The new <br>Lady</span>
+                    <h5 class="grey">Dear winter, it was fun while it lasted. But the forecast <br>says that dress season has officially arrived! Spring <br>forward with our swingy, springy, dress shop</h5>
+                </div>
+                <div class="image">
+                    <img src="./yellow.jpg" alt="yell">
+                </div>
+                <div class="image2">
+                    <img src="./yell.jpg" alt="yellow girl">
+                </div>
+            </section>
+            <!-- <section class="right20"> -->
+                <!-- <img src="./menu.png" alt="menu" class="icon"> -->
+                <!-- <img src="./instagram.svg" alt="instagram" class="icon"> -->
+                <!-- <img src="./facebook.svg" alt="facebook" class="icon"> -->
+            <!-- </section> -->
         </section>
-    <div class="grey">
-        <h5>Dear winter, it was fun while it lasted. But the forecast <br>says that dress season has officially arrived! Spring <br>forward with our swingy, springy, dress shop</h5>
-    </div>
-    <span class="bruh">The new Lady</span>
-    <div class="image">
-        <img src="./yell.jpg" alt="yell">
-    </div>
-    <div class="image2">
-        <img src="./yellow.jpg" alt="yellow girl">
-    </div>
+    </section>
 </body>
 </html>
